[package]
name = "iban_validator"
description = "A zero-dependency hobby crate that can be used to validate ibans."
version = "0.1.0"
edition = "2021"
authors = ["Lucas Horward"]
repository = "https://github.com/lucashorward/iban"
readme = "README.md"
keywords = ["iban", "validation", "validator"]
license = "MIT"
include = ["src/**/*", "README.md"]

[lib]
name = "iban_validator"
path = "src/lib.rs"
test = true
doc = true
doctest = false
crate-type = ["cdylib"]
bench = true
readme = "README.md"